# git_inspector

./: .gitignore  LICENSE  README.md  git_inspector.py  git_inspector.sh  install.sh  requirements.txt  setup.cfg  tox.ini  un_install.sh
.circleci/: config.yml
documentation/: create_example_output_gif.sh  create_sample_output.py  everything_ok.txt  example_output.html  generate_example_output.py  requirements.txt  test_setup.py  type_promot.cast
git_inspector/: __init__.py  common.py  config.py  find_git_repo.py  git_inspector.py  py_find.py  report.py  report_formatter.py
git_inspector/reports/: __init__.py  dirty.py  git_report.py  merged.py  merged_branches.py  report.py  summary.py  unpushed.py  untracked.py  untracked_branches.py
profile/reports/: is_ahead_is_ancestor.py
src/git_inspector/: __init__.py  __main__.py  common.py  config.py  exceptions.py  find_git_repo.py  generate_reports.py  git_inspector.py  inspect_repos.py  report_formatter.py
tests/: conftest.py  create_sample_output.py  sample_output.py  test_find_git_repo.py  test_find_git_repo_excluded_dirs.py  test_full_working.py  test_print_as_discovered.py  test_report_formatter.py  testutils.py
tests/cli/: test_empty_output_on_empty_directory.py  test_parse_arguments.py  test_report_formatter.py
tests/common/: test_is_ahead_of.py  test_is_ancestor_of.py
tests/find_git_repo/: test_find_git_repo.py  test_find_git_repo_excluded_dirs.py
tests/reports/: common.py  test_broken_remote.py  test_dirty.py  test_dirty_report.py  test_local.py  test_merged.py  test_merged_branches.py  (+3 more)
(+18 files in other folders)
