[metadata]
name = git_inspector
description = My package description
long_description = file: README.rst
url = https://link-to-your-project
license = MIT License

[options]
zip_safe = False
packages = find:
package_dir =
   =src
install_requires =
  gitpython
  pytest
  pytest-cov
  termcolor

[options.packages.find]
where = src
