[metadata]
name = git_inspector
description = Report best practice violations for git repositories
long_description = file: README.rst
url = https://github.com/yaniksoeltzer/git_inspector
license = GNU GPLv3

[options]
zip_safe = False
packages = find:
package_dir =
   =src
install_requires =
  gitpython
  lorem
  pytest
  pytest-cov
  termcolor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  git-inspector = git_inspector:__main__
  git_inspector = git_inspector:__main__
